add simple protection to run scripts outside environment
